--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/storage": "^2.1.3",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
+    "fabric": "^2.6.0",
     "ionic-angular": "^3.9.2",
     "jquery": "^3.3.1",
     "ol": "^5.3.0",
